Update project persister

--- a/egov-indexer/project-indexer.yml
+++ b/egov-indexer/project-indexer.yml
@@ -7,72 +7,8 @@ ServiceMaps:
       indexes:
         - name: project-services
           type: general
-          id: $.Projects.*.id
-          jsonPath: $.Projects.*
-          timeStampField: $.Projects.*.auditDetails.createdTime
-          fieldsToBeMasked: []
-          customJsonMapping:
-            indexMapping:
-              Data:
-                documents: {}
-                tenantId: ""
-                address: {}
-                auditDetails: {}
-                targets: {}
-            fieldMapping:
-              - inJsonPath: $.documents
-                outJsonPath: $.Data.documents
-              - inJsonPath: $.tenantId
-                outJsonPath: $.Data.tenantId
-              - inJsonPath: $.projectNumber
-                outJsonPath: $.Data.projectNumber
-              - inJsonPath: $.name
-                outJsonPath: $.Data.name
-              - inJsonPath: $.projectType
-                outJsonPath: $.Data.projectType
-              - inJsonPath: $.@timestamp
-                outJsonPath: $.Data.@timestamp
-              - inJsonPath: $.auditDetails
-                outJsonPath: $.Data.auditDetails
-              - inJsonPath: $.address
-                outJsonPath: $.Data.address
-              - inJsonPath: $.projectSubType
-                outJsonPath: $.Data.projectSubType
-              - inJsonPath: $.department
-                outJsonPath: $.Data.department
-              - inJsonPath: $.description
-                outJsonPath: $.Data.description
-              - inJsonPath: $.referenceID
-                outJsonPath: $.Data.referenceID
-              - inJsonPath: $.projectTypeId
-                outJsonPath: $.Data.projectTypeId
-              - inJsonPath: $.startDate
-                outJsonPath: $.Data.startDate
-              - inJsonPath: $.endDate
-                outJsonPath: $.Data.endDate
-              - inJsonPath: $.isTaskEnabled
-                outJsonPath: $.Data.isTaskEnabled
-              - inJsonPath: $.parent
-                outJsonPath: $.Data.parent
-              - inJsonPath: $.projectHierarchy
-                outJsonPath: $.Data.projectHierarchy
-              - inJsonPath: $.natureOfWork
-                outJsonPath: $.Data.natureOfWork
-              - inJsonPath: $.targets
-                outJsonPath: $.Data.targets
-              - inJsonPath: $.additionalDetails
-                outJsonPath: $.Data.additionalDetails
-              - inJsonPath: $.isDeleted
-                outJsonPath: $.Data.isDeleted
-              - inJsonPath: $.rowVersion
-                outJsonPath: $.Data.rowVersion
-
-    - topic: update-project-request-indexer
-      configKey: INDEX
-      indexes:
-        - name: project-services
-          type: general
           id: $.id
+          isBulk: true
           jsonPath: $.Projects.*
           timeStampField: $.auditDetails.createdTime
           fieldsToBeMasked: []
@@ -131,3 +67,77 @@ ServiceMaps:
                 outJsonPath: $.Data.isDeleted
               - inJsonPath: $.rowVersion
                 outJsonPath: $.Data.rowVersion
+              - inJsonPath: $.district
+                outJsonPath: $.Data.district
+              - inJsonPath: $.block
+                outJsonPath: $.Data.block
+
+    - topic: update-project-request-indexer
+      configKey: INDEX
+      indexes:
+        - name: project-services
+          type: general
+          id: $.id
+          isBulk: true
+          jsonPath: $.Projects.*
+          timeStampField: $.auditDetails.createdTime
+          fieldsToBeMasked: []
+          customJsonMapping:
+            indexMapping:
+              Data:
+                documents: {}
+                tenantId: ""
+                address: {}
+                auditDetails: {}
+                targets: {}
+            fieldMapping:
+              - inJsonPath: $.documents
+                outJsonPath: $.Data.documents
+              - inJsonPath: $.tenantId
+                outJsonPath: $.Data.tenantId
+              - inJsonPath: $.projectNumber
+                outJsonPath: $.Data.projectNumber
+              - inJsonPath: $.name
+                outJsonPath: $.Data.name
+              - inJsonPath: $.projectType
+                outJsonPath: $.Data.projectType
+              - inJsonPath: $.@timestamp
+                outJsonPath: $.Data.@timestamp
+              - inJsonPath: $.auditDetails
+                outJsonPath: $.Data.auditDetails
+              - inJsonPath: $.address
+                outJsonPath: $.Data.address
+              - inJsonPath: $.projectSubType
+                outJsonPath: $.Data.projectSubType
+              - inJsonPath: $.department
+                outJsonPath: $.Data.department
+              - inJsonPath: $.description
+                outJsonPath: $.Data.description
+              - inJsonPath: $.referenceID
+                outJsonPath: $.Data.referenceID
+              - inJsonPath: $.projectTypeId
+                outJsonPath: $.Data.projectTypeId
+              - inJsonPath: $.startDate
+                outJsonPath: $.Data.startDate
+              - inJsonPath: $.endDate
+                outJsonPath: $.Data.endDate
+              - inJsonPath: $.isTaskEnabled
+                outJsonPath: $.Data.isTaskEnabled
+              - inJsonPath: $.parent
+                outJsonPath: $.Data.parent
+              - inJsonPath: $.projectHierarchy
+                outJsonPath: $.Data.projectHierarchy
+              - inJsonPath: $.natureOfWork
+                outJsonPath: $.Data.natureOfWork
+              - inJsonPath: $.targets
+                outJsonPath: $.Data.targets
+              - inJsonPath: $.additionalDetails
+                outJsonPath: $.Data.additionalDetails
+              - inJsonPath: $.isDeleted
+                outJsonPath: $.Data.isDeleted
+              - inJsonPath: $.rowVersion
+                outJsonPath: $.Data.rowVersion
+              - inJsonPath: $.district
+                outJsonPath: $.Data.district
+              - inJsonPath: $.block
+                outJsonPath: $.Data.block
