Update project indexer

--- a/egov-indexer/project-indexer.yml
+++ b/egov-indexer/project-indexer.yml
@@ -140,7 +140,7 @@ ServiceMaps:
                 outJsonPath: $.Data.rowVersion
               - inJsonPath: $.additionalDetails.status
                 outJsonPath: $.Data.status
-                filter: "$.additionalDetails.status"
+                filter: "$[?(@.additionalDetails.status != null)]"
               - inJsonPath: $.additionalDetails.facility
                 outJsonPath: $.Data.facility
                 filter: "$.additionalDetails.facility"
