Add project indexer (#55)
* Add indexer project

* Fix indexer issue file

* Update project persister

* Update project indexer

* Update project indexer

* Update project indexer

* Update project indexer

* Fix project indexer issue

* Update project indexer

* Update project indexer

* Update indexer

* Update project indexer

---------

Co-authored-by: Babacar Ndiaye <babacar.ndiay93@gmail.com>

--- a/egov-indexer/project-indexer.yml
+++ b/egov-indexer/project-indexer.yml
@@ -140,10 +140,10 @@ ServiceMaps:
                 outJsonPath: $.Data.rowVersion
               - inJsonPath: $.additionalDetails.status
                 outJsonPath: $.Data.status
-                filter: "$[?(@.additionalDetails.status != null)]"
+                filter: "$[?(@ != null)]"
               - inJsonPath: $.additionalDetails.facility
                 outJsonPath: $.Data.facility
-                filter: "$.additionalDetails.facility"
+                filter: "$[?(@ != null)]"
               - inJsonPath: $.additionalDetails.assignedTo
                 outJsonPath: $.Data.assignedTo
-                filter: "$.additionalDetails.assignedTo"
+                filter: "$[?(@ != null)]"
