added new topic for pause state and modified the indexer

--- a/egov-indexer/project-indexer.yml
+++ b/egov-indexer/project-indexer.yml
@@ -143,3 +143,5 @@ ServiceMaps:
                 outJsonPath: $.Data.status
               - inJsonPath: $.additionalDetails.assignedTo
                 outJsonPath: $.Data.assignedTo
+              - inJsonPath: $.additionalDetails.isPaused
+                outJsonPath: $.Data.isPaused
