--- a/egov-persister/egov-workflow-v2-persister.yml
+++ b/egov-persister/egov-workflow-v2-persister.yml
@@ -294,3 +294,27 @@ serviceMaps:
           - jsonPath: $.ProcessInstances.*.stateSla
 
           - jsonPath: $.ProcessInstances.*.id
+
+  - version: 1.0
+    description: Persists pause state in the table (insert or update)
+    fromTopic: save-wf-pausestate
+    isTransaction: true
+    queryMaps:
+      - query: INSERT INTO eg_wf_pause_state (businessId, businessService, isPaused, comments, createdBy, lastModifiedBy, createdTime, lastModifiedTime) VALUES (?, ?, ?, ?::jsonb, ?, ?, ?, ?) ON CONFLICT (businessId, businessService) DO UPDATE SET isPaused = EXCLUDED.isPaused, comments = EXCLUDED.comments, lastModifiedBy = EXCLUDED.lastModifiedBy, lastModifiedTime = EXCLUDED.lastModifiedTime;
+        basePath: PauseStates.*
+        jsonMaps:
+          - jsonPath: $.PauseStates.*.businessId
+
+          - jsonPath: $.PauseStates.*.businessService
+
+          - jsonPath: $.PauseStates.*.isPaused
+
+          - jsonPath: $.PauseStates.*.comments
+
+          - jsonPath: $.PauseStates.*.auditDetails.createdBy
+
+          - jsonPath: $.PauseStates.*.auditDetails.lastModifiedBy
+
+          - jsonPath: $.PauseStates.*.auditDetails.createdTime
+
+          - jsonPath: $.PauseStates.*.auditDetails.lastModifiedTime
