--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -353,3 +353,24 @@ ServiceMaps:
               outJsonPath: $.Data.userLoginReport.district
             - inJsonPath: $.state
               outJsonPath: $.Data.userLoginReport.state
+
+  - topic: save-phc-master-list-indexer
+    configKey: INDEX
+    indexes:
+      - name: phc-master-list-new-2
+        type: general
+        id: $.tenantId
+        jsonPath: $
+        timeStampField: $.lastModifiedTime
+        fieldsToBeMasked: []
+        customJsonMapping:
+          indexMapping: {}
+          fieldMapping:
+            - inJsonPath: $.total_tickets
+              outJsonPath: $.totalTickets
+            - inJsonPath: $.open_tickets
+              outJsonPath: $.openTickets
+            - inJsonPath: $.closed_tickets
+              outJsonPath: $.closedTickets
+            - inJsonPath: $.solar_panel_status
+              outJsonPath: $.solarPanelStatus
