--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -497,7 +497,7 @@ ServiceMaps:
               - inJsonPath: $.type
                 outJsonPath: $.Data.type
               - inJsonPath: $.tenantIdLocalized
-                outJsonPath: $.Data.tenantIdLocalized
+                outJsonPath: $.Data.tenantId_localized
               - inJsonPath: $.geoPoint
                 outJsonPath: $.Data.geoPoint
               - inJsonPath: $.totalTickets
