--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -499,7 +499,7 @@ ServiceMaps:
               - inJsonPath: $.tenantIdLocalized
                 outJsonPath: $.Data.tenantId_localized
               - inJsonPath: $.geoPoint
-                outJsonPath: $.Data.geoPoint
+                outJsonPath: $.Data.geo-point
               - inJsonPath: $.totalTickets
                 outJsonPath: $.Data.total_tickets
               - inJsonPath: $.openTickets
