Add project indexer (#66)
* Add indexer project

* Fix indexer issue file

* Update project persister

* Update project indexer

* Update project indexer

* Update project indexer

* Update project indexer

* Fix project indexer issue

* Update project indexer

* Update project indexer

* Update indexer

* Update project indexer

* Update project indexer

* Update project indexer

* Update project indexer

* Update project indexer

* Update project indexer

* Update im-service indexer

* Update im-service indexer

* Update im-services indexer

* Update im-services indexer

* Update indexer

---------

Co-authored-by: Babacar Ndiaye <babacar.ndiay93@gmail.com>

--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -497,9 +497,9 @@ ServiceMaps:
               - inJsonPath: $.type
                 outJsonPath: $.Data.type
               - inJsonPath: $.tenantIdLocalized
-                outJsonPath: $.Data.tenantIdLocalized
+                outJsonPath: $.Data.tenantId_localized
               - inJsonPath: $.geoPoint
-                outJsonPath: $.Data.geoPoint
+                outJsonPath: $.Data.geo-point
               - inJsonPath: $.totalTickets
                 outJsonPath: $.Data.total_tickets
               - inJsonPath: $.openTickets
