fixed the multiple reject reason in index second attempt

--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -134,7 +134,7 @@ ServiceMaps:
                 outJsonPath: $.Data.comments
               - inJsonPath: $.incidentRequest.incident.additionalDetail.rejectReason
                 outJsonPath: $.Data.incident.additionalDetail.rejectReason
-
+                valueType: STRING
 
     - topic: update-im-request-indexer
       configKey: INDEX
@@ -268,7 +268,7 @@ ServiceMaps:
                 outJsonPath: $.Data.comments
               - inJsonPath: $.incidentRequest.incident.additionalDetail.rejectReason
                 outJsonPath: $.Data.incident.additionalDetail.rejectReason
-
+                valueType: STRING
 
     - topic: im-services-inboxIndex
       configKey: LEGACYINDEX
